testdata/golden/sema/invalid/ret_bare_non_nothing_block.fmt
fn main(flag: bool) -> int {
    let x = {
        if flag {
            ret;
        }
        ret 1;
    };
    return x;
}
